# pictura

./: .gitignore  Cargo.toml  POST_MORTEM.md  README.md  TECH_STACK.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: decode.rs
docs/adr/: 001-egui-gui-framework.md  002-image-crate-decoder.md
src/: app.rs  config.rs  loader.rs  main.rs  navigation.rs  viewer.rs
